[tool.poetry]
name = "fishsense-account-service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
google-auth = "^2.30.0"
flask-cors = "^4.0.1"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"



[tool.poetry.group.prod.dependencies]
gunicorn = "^22.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
